# Slixfeed

./: LICENSE  README.md  THANKS.md  accounts.ini  lists.yaml  package_generator.sh  pyproject.toml  settings.ini  setup.cfg  setup.py  setup.py.bak  slixfeed.py
assets/: pathnames.txt  proxies.yaml  queries.yaml  settings.csv  settings.ini
datasets/activity/: bot.csv  fediverse.csv  game.csv  internet.csv  irc.csv  linux.csv  operating_system.csv  syndication.csv  voip.csv  wifi.csv  xmpp.csv
datasets/catalogues/: audiobook.csv  book.csv  books.csv  computer.csv  cve.csv  electronics.csv  film.csv  game.csv  gear.csv  music.csv  quotes.csv  recipe.csv  software.csv  theme.csv  torrent.csv  travel.csv  vacancy.csv  webring.csv
datasets/corporations/: automotive.csv  communication.csv  computing.csv  cybersecurity.csv  data.csv  delivery.csv  hardware.csv  hosting.csv  linux.csv  marketing.csv  music.csv  publishing.csv  school.csv
datasets/downloads/: leaked_data.csv  music.csv
datasets/events/: blockchain.csv  club.csv  computing.csv  graphics.csv  internet.csv  misc.csv  xmpp.csv
datasets/forums/: cms.csv  coding.csv  computer.csv  game.csv  graphics.csv  hacking.csv  intrenet.csv  linux.csv  misc.csv  multimedia.csv  p2p.csv  telecom.csv
datasets/fronts/: human_trafficking.csv  united_states.csv
datasets/games/: building.csv  card.csv  fps.csv  race.csv
datasets/governments/: ireland.csv  luxemburg.csv  switzerland.csv  united_Kingdom.csv  united_Kingdom.csv.old
datasets/legislatures/: iceland.csv  idaho.csv  ireland.csv
datasets/music/: electronic.csv
datasets/news/: 5g.csv  architecture.csv  art.csv  australia.csv  blockchain.csv  bsd.csv  bsd_linux_unix.csv  business.csv  canada.csv  censorship.csv  christianity.csv  code.csv  computer.csv  computing.csv  crime.csv  culture.csv  cybersecurity.csv  data.csv  design.csv  electronics.csv  entertainment.csv  europe.csv  family.csv  farm.csv  fiction.csv  finance.csv  fluoride.csv  food.csv  gaming.csv  general.csv  geography.csv  germany.csv  government.csv  grammar.csv  hacking.csv  hardware.csv  health.csv  history.csv  internet.csv  islam.csv  (+37 more)
datasets/organizations/: australia.csv  france.csv  germany.csv  netherlands.csv  united_states.csv
datasets/podcasts/: business.csv  code.csv  computer.csv  culture.csv  government.csv  judaism.csv  law.csv  technology.csv  united_states.csv
datasets/projects/: automation.csv  backup.csv  blockchain.csv  chat.csv  chemistry.csv  cloud.csv  code.csv  compiler.csv  data.csv  desktop.csv  email.csv  encryption.csv  fediverse.csv  firewall.csv  forums.csv  game.csv  graphics.csv  internet.csv  issue_tracker.csv  mathematics.csv  mix_network.csv  multimedia.csv  office.csv  operating_system.csv  p2p.csv  programming_language.csv  publishing.csv  system.csv  terminal.csv  toolkit.csv  visualization.csv  voip.csv  website.csv  wifi.csv  xmpp.csv
datasets/tutorials/: code.csv  computer.csv  data.csv  linux.csv  network.csv  perl.csv  python.csv  ruby.csv
datasets/videos/: game.csv  general.csv  government.csv  graphics.csv  lifestyle.csv  privacy.csv  propaganda.csv  software.csv  surveillance.csv  technology.csv
datasets/wiki/: computing.csv  data.csv  encyclopedia.csv  health.csv  linux.csv  multimedia.csv  wifi.csv
slixfeed/: __init__.py  __main__.py  action.py  bittorrent.py  cli.py  config.py  confighandler.py  crawl.py  database.py  datahandler.py  datetime.py  datetimehandler.py  dt.py  export.py  feedhandler.py  fetch.py  filehandler.py  filter.py  filterhandler.py  format.py  listhandler.py  log.py  main.py  main.py.bak  opml.py  opmlhandler.py  read.py  settings.py  sqlite.py  sqlitehandler.py  syndication.py  task.py  taskhandler.py  url.py  urlhandler.py  utilities.py  utility.py  version.py  xmpphandler.py
slixfeed/assets/: about.toml  accounts.ini  accounts.toml  commands.toml  feeds.csv  feeds.toml  information.toml  lists.toml  lists.yaml  proxies.toml  proxies.yaml  queries.toml  settings.ini  settings.toml
slixfeed/documentation/: adhoc_commands_muc.md
slixfeed/xmpp/: adhoc.py  bookmark.py  chat.py  client.py  command.py  commands.py  component.py  compose.py  connect.py  encryption.py  groupchat.py  ipc.py  iq.py  manual.py  message.py  muc.py  presence.py  privilege.py  process.py  profile.py  publish.py  roster.py  service.py  state.py  status.py  text.py  upload.py  utilities.py  utility.py
