[metadata]
name = Slixfeed
version = 1.0
description = RSS news bot for XMPP
long_description = Slixfeed is a news aggregator bot for online news feeds. This program is primarily designed for XMPP
author = Schimon Zachary
author_email = sch@fedora.email
url = https://gitgud.io/sjehuda/slixfeed
license = MIT
platforms = any
classifiers =
    Framework :: slixmpp
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Chat
    Topic :: Internet :: Extensible Messaging and Presence Protocol (XMPP)
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
    Topic :: Internet :: Instant Messaging
    Topic :: Internet :: XMPP
    Topic :: Office/Business :: News/Diary
keywords =
    atom
    bot
    chat
    im
    jabber
    news
    rdf
    rss
    syndication
    xmpp

[options]
install_requires =
    aiohttp
    bs4
    feedparser
    lxml
    slixmpp

[options.extras_require]
export as markdown = html2text
export as pdf = pdfkit
readable html = readability-lxml
